Revision history for Perl extension {{$dist->name}}

{{$NEXT}}
    - moved the warn catcher to before using the candidate module

1.100860  2010-03-27 11:07:16 Europe/Vienna
    - made the generated test more robust by catching and noting warnings.
      HTML::Table's illegal version string '2.08a' caused problems.

1.100840  2010-03-25 11:50:31 Europe/Vienna
    - removed weaver.ini since that's handled in Dist::Zilla's [@MARCEL] now
    - catch undefined version numbers so there's no warning
    - the generated test requires Test::More 0.88 for done_testing() to work
      without a plan
    - skip App::FatPacker

1.100700  2010-03-11 15:44:30 Europe/Vienna
    - original version