@@ -2,6 +2,7 @@ Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
     - moved the warn catcher to before using the candidate module
+    - when skipping a module, make a note about it
 
 1.100860  2010-03-27 11:07:16 Europe/Vienna
     - made the generated test more robust by catching and noting warnings.
